examples: back the four README reader examples with runnable single-file programs
Each of the four numbered reader entry points in the README now links to a
runnable single-file Java 25 program and shows its exact run command:

- ObjectBinding.java    (§1 TsonObjectReader -- schemaless record bind)
- TreeWalk.java         (§2 TsonDataParser  -- navigate a Document/CoreValue AST)  [new]
- EventStream.java      (§3 TsonDataStream  -- pull a lazy TsonEvent stream)       [new]
- SchemaValidation.java (§4 TsonValueReader -- compile a schema, validate + collect a diagnostic)

SchemaValidation.java realigned to the README's own server/hostname/port schema
so its output matches the page. All four verified end to end on the module path.
TreeWalk uses `var` for the ast.Field loop -- module import makes the bare name
`Field` ambiguous against io.ltr8.annotation.Field and java.lang.reflect.Field.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>